/*
 * $Id: Changelog,v 1.448 2005-10-31 15:00:30 lculik Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2005-10-31 13:00 UTC-0300 Luiz Rafael Culik <culikr at brturbo.com.br>
   * source/commond.c
     source/wprint.c
     misc.c
     ! optimized and removed the usage of hb_item_new macro

2005-10-31 13:10 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
   * source/hfrmtmpl.prg
     ! Fixed problem with names of a tab sheets

2005-10-31 11:30 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
   * gtk/control.c
     * CreatePanel(), CreateOwnBtn() functions added
   * gtk/window.c
     * Handling of GDK_ENTER_NOTIFY and GDK_LEAVE_NOTIFY events added
   * gtk/hbrowse.prg
     ! Small fix
   * gtk/hpanel.prg
     ! Small fix
   + gtk/hownbtn.prg
     + OwnerButtons support added
   * gtk/Makefile.linux
     * Changed due to the adding of new file


2005-10-28 16:10 UTC-0300 Luiz Rafael Culik <culikr at brturbo.com.br>
   * gtk/window.c
     ! reverted back to this morning version with small fix
     
2005-10-28 10:25 UTC-0300 Luiz Rafael Culik <culikr at brturbo.com.br>
   * gtk/draw.c
     gtk/drawtext.c
     gtk/commond.c
     ! changed all call to &(HB_VM_STACK).Return to hb_stackReturnItem() under xharbour      
     
2005-10-28 10:20 UTC-0300 Luiz Rafael Culik <culikr at brturbo.com.br>
   * gtk/window.c
     ! small fixes

2005-10-28 10:20 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
   * source/hhyper.prg
     * Added #define TRANSPARENT  1, which was removed from windows.ch 

2005-10-27 16:10 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
   * gtk/control.c
     * Small cleanup
   * gtk/draw.c
     * Functions, compatible with appropriates from Win32 version,
       has been implemented:
        OpenBitmap()
        OpenImage()
        DrawBitmap()